fixing overlap

--- a/asset/common.css
+++ b/asset/common.css
@@ -245,6 +245,11 @@ p{
     justify-content: flex-end;
     max-width: 90%;
 }
+
+blockquote{
+    max-width: 80%;
+}
+
 .top-button {
     bottom: 65px;
 }
